WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267621
[iOS] Fullscreen warning banner can be cut off with long domain name
https://bugs.webkit.org/show_bug.cgi?id=267621
Summary
[iOS] Fullscreen warning banner can be cut off with long domain name
Jer Noble
Reported
2024-01-16 22:40:52 PST
[iOS] Fullscreen warning banner can be cut off with long domain name
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-01-16 22:41:18 PST
<
rdar://problem/118078137
>
Jer Noble
Comment 2
2024-01-16 22:44:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22851
EWS
Comment 3
2024-01-17 10:17:34 PST
Committed
273129@main
(61d7c5072309): <
https://commits.webkit.org/273129@main
> Reviewed commits have been landed. Closing PR #22851 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug