[iOS] Fullscreen warning banner can be cut off with long domain name https://bugs.webkit.org/show_bug.cgi?id=267621 rdar://118078137

Reviewed by Eric Carlson.

Give the warning banner a maximum width, forcing it to break lines when
domain names are long enough to justify it.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController loadView]):
(-[WKFullScreenViewController viewDidLayoutSubviews]):

Canonical link: https://commits.webkit.org/273129@main